# bigfloat

./: .gitignore  CMakeLists.txt  README.md  bigfloat.cpp  bigfloat.h  git_hub_token  main.cpp  pi.cpp
bigfloat_lib/: CMakeLists.txt  bigfloat.cpp  bigfloat.h
pi_lib/: CMakeLists.txt  pi.cpp  pi.h
tests/: CMakeLists.txt  Test1.cpp  aritmetics_tests.cpp  pi_tests.cpp
